--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,11 +19,6 @@ jobs:
           name: artifact
           path: ${{ github.workspace }}/artifact/
 
-      - name: Rename
-        run: |
-          mv ${{ github.workspace }}/artifact/*.deb ${{ github.workspace }}/artifact/kernel.deb
-
-
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
@@ -34,4 +29,4 @@ jobs:
           generate_release_notes: true
           token: ${{ secrets.RELEASE_GITHUB_TOKEN }}
           files: |
-            ${{ github.workspace }}/artifact/kernel.deb
+            ${{ github.workspace }}/artifact/*.deb
