--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,4 +29,4 @@ jobs:
           generate_release_notes: true
           token: ${{ secrets.RELEASE_GITHUB_TOKEN }}
           files: |
-            ${{ github.workspace }}/artifact/*.deb
+            ${{ github.workspace }}/artifact/kernel.tar.gz
